--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -15,7 +15,7 @@ header {
     color: #ABD0CB;
     position: sticky;
     top: 0;
-    z-index:2;
+    z-index:12;
     opacity:0.9;
     border-bottom: 1px solid;
 }
@@ -73,7 +73,7 @@ nav a:hover {
     padding-left: 10px;
 }
 
-#bio, #projects, #running, #reading {
+#bio, #project, #running, #reading {
     padding-top: 100px; 
     margin-top: -100px;
 }
@@ -81,11 +81,62 @@ nav a:hover {
 .larger {
     font-size: 1.5rem;
 }
+
+#projects {
+    color: #ABD0CB;
+    font-size: 80px;
+    margin: 0px;
+    padding-top: -23%;
+    text-align: center;
+    z-index: 2;
+}
+
+.pr1 {
+    background-image: url("https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.VRF9-XGFuEsBfeJv_dft2QHaK-%26pid%3DApi&f=1&ipt=d9ebec82e3c19b5766b53b24d2e3fb62a699eeb237f99c95bb498ba7ca70a89b&ipo=images");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top;
+    font-family: 'Rubik Vinyl', cursive;
+}
+
+.pr2 {
+    background-image: url("https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.M5sMZiJzvG2sxt4Is0vv0QHaE8%26pid%3DApi&f=1&ipt=9b98d76d60b7e124af53275d29fdfe3662319a916f5d6976ce82ebea86a41f83&ipo=images");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center top;
+    font-family: 'Rubik Vinyl', cursive;
+}
+
+.pr3 {
+    background-image: url("https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.GCINeHkXMbwwxChEg9-DxwHaEK%26pid%3DApi&f=1&ipt=4e710a2e69fb22d95ac5feaeea431381be8537f8c69a40355652c9089f399cda&ipo=images");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center top;
+    font-family: 'Rubik Vinyl', cursive;
+}
+.pr1 a, .pr2 a,  .pr3 a {
+    text-decoration: none;
+    color:#ABD0CB;
+    z-index:1;
+}
+
+.overlay:before {
+    content: " ";
+    z-index: 1;
+    display: block;
+    position: absolute;   
+    height: 40%;
+    width: 33%;
+    background: rgba(0, 0, 0, 0.7);
+}
+.overlay * {
+    position: relative; /* Makes elements display above overlay. */
+}
 .gridthree {
-    height: 730px;
+    height: 300px;
     width: 100%;
     display: grid;
-    grid-template: 150px 250px/ repeat(3, 1fr);
+    grid-template: 150px 150px/ repeat(3, 1fr);
     gap: 10px 15px;
   }
 
@@ -135,4 +186,3 @@ nav a:hover {
     margin-left:40%;
     font-size:0.7rem;
 }
-  
